--- a/index.html
+++ b/index.html
@@ -8,6 +8,130 @@
   <title>Евклид</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container header__container">
+      <a class="header__logo logo" href="#">
+        <img src="images/logo.svg" alt="Логотип фирмы Евклид">
+      </a>
+      <nav class="nav header__nav">
+        <ul class="list-reset header__items">
+          <li class="header__item">
+            <a class="header__link" href="#about-us">О&nbsp;нас</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#stages">Этапы</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#questions">Вопросы</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#footer">Оставить заявку</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="btn-reset header__btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <rect width="7.56126" height="1.89031" transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6064 17.3762)" fill="black"/>
+          <path d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z" stroke="black" stroke-width="2"/>
+        </svg>
+      </button>
+    </div>
+  </header>
+  <main class="main">
+    <section class="hero">
+      <div class="container hero__container">
+        <h1 class="hero__title">
+          Проектные решения любой сложности
+        </h1>
 
+        <p class="hero__descr">
+          Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются уделом проектантов
+        </p>
+
+        <button class="btn-reset btn hero__btn">Заказать расчёт</button>
+      </div>
+    </section>
+
+    <section class="about-us" id="about-us">
+      <div class="container">
+        <div class="about-us__top">
+          <h2 class="section-title about-us__title">О&nbsp;нас</h2>
+
+          <p class="about-us__descr">
+            Также как перспективное планирование создаёт необходимость включения в&nbsp;производственный план целого ряда внеочередных мероприятий с&nbsp;учётом комплекса экспериментов, поражающих по&nbsp;своей масштабности и&nbsp;грандиозности. А&nbsp;также диаграммы связей могут быть описаны максимально подробно. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что убеждённость некоторых оппонентов требует от&nbsp;нас анализа как самодостаточных, так и&nbsp;внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.
+          </p>
+        </div>
+
+        <div class="about-us__bottom">
+          <div class="about-us__left">
+            <div class="about-us__box box">
+              <p class="box__descr box__descr--color">
+                Принимая во&nbsp;внимание показатели успешности, перспективное планирование способствует подготовке и&nbsp;реализации новых принципов
+              </p>
+
+              <button class="btn-reset btn box__btn">Подробнее</button>
+            </div>
+          </div>
+          <div class="about-us__right">
+            <div class="box">
+              <div class="box__decor"></div>
+              <div class="box__wrapper">
+                <h3 class="section-subtitle box__title">
+                  Консультация с&nbsp;широким активом
+                </h3>
+
+                <p class="box__descr">
+                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для как самодостаточных, так и&nbsp;внешне зависимых концептуальных решений
+                </p>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="box__decor"></div>
+              <div class="box__wrapper">
+                <h3 class="section-subtitle box__title">
+                  В&nbsp;своём стремлении повысить
+                </h3>
+
+                <p class="box__descr">
+                  Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="stages" id="stages">
+      <div class="container">
+        <h2 class="section-title stages__title">Этапы</h2>
+        <div class="stages__wrapper">
+          <div class="stages__content">
+            <h3 class="section-subtitle stages__subtitle">Проводим консультацию</h3>
+
+            <p class="stages__descr">
+              Влечёт за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями. В&nbsp;рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
+            </p>
+
+            <p class="stages__descr">
+              А&nbsp;также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с&nbsp;зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в&nbsp;целом, однако конкретные выводы, разумеется, призваны к&nbsp;ответу.
+            </p>
+
+            <div class="stages__buttons">
+              <button class="btn-reset btn stages__btn">Подробнее</button>
+              <button class="btn-reset btn stages__btn--transp">Договор</button>
+            </div>
+          </div>
+
+          <div class="stages__picture"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="questions" id="questions"></section>
+  </main>
+
+  <footer class="footer"></footer>
 </body>
 </html>
