--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <title>Евклид</title>
 </head>
 <body>
   <header class="header">
-    <div class="container header__container">
+    <div class="container header__container flex">
       <a class="header__logo logo" href="#">
         <img src="images/logo.svg" alt="Логотип фирмы Евклид">
       </a>
       <nav class="nav header__nav">
-        <ul class="list-reset header__items">
+        <ul class="list-reset header__items flex">
           <li class="header__item">
             <a class="header__link" href="#about-us">О&nbsp;нас</a>
           </li>
@@ -264,7 +265,7 @@
           </div>
         </form>
       </div>
-      
+
       <div class="footer__right">
         <p class="footer__descr">
           Высокий уровень вовлечения представителей целевой аудитории является чётким доказательством простого факта: разбавленное изрядной долей эмпатии, рациональное мышление позволяет оценить значение модели развития. Таким образом, консультация с&nbsp;широким активом обеспечивает широкому кругу (специалистов) участие в&nbsp;формировании стандартных подходов.
