--- a/index.html
+++ b/index.html
@@ -38,57 +38,61 @@
       </button>
     </div>
   </header>
+
   <main class="main">
     <section class="hero">
       <div class="container hero__container">
-        <h1 class="hero__title">
-          Проектные решения любой сложности
-        </h1>
+        <div class="hero__wrapper">
+          <h1 class="hero__title">
+            Проектные решения любой сложности
+          </h1>
 
-        <p class="hero__descr">
-          Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются уделом проектантов
-        </p>
+          <p class="hero__descr">
+            Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются уделом проектантов
+          </p>
 
-        <button class="btn-reset btn hero__btn">Заказать расчёт</button>
+          <button class="btn-reset btn hero__btn">Заказать расчёт</button>
+        </div>
       </div>
     </section>
 
     <section class="about-us" id="about-us">
-      <div class="container">
+      <div class="container about-us__container">
         <div class="about-us__top">
           <h2 class="section-title about-us__title">О&nbsp;нас</h2>
 
           <p class="about-us__descr">
-            Также как перспективное планирование создаёт необходимость включения в&nbsp;производственный план целого ряда внеочередных мероприятий с&nbsp;учётом комплекса экспериментов, поражающих по&nbsp;своей масштабности и&nbsp;грандиозности. А&nbsp;также диаграммы связей могут быть описаны максимально подробно. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что убеждённость некоторых оппонентов требует от&nbsp;нас анализа как самодостаточных, так и&nbsp;внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.
+            Также как перспективное планирование создаёт необходимость включения в&nbsp;производственный план целого ряда внеочередных мероприятий с&nbsp;учётом комплекса экспериментов, поражающих по&nbsp;своей масштабности и&nbsp;грандиозности. А&nbsp;также диаграммы связей могут быть описаны максимально подробно. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что убеждённость некоторых оппонентов требует от&nbsp;нас анализа как&nbsp;самодостаточных, так и&nbsp;внешне зависимых концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет высокую востребованность позиций, занимаемых участниками в&nbsp;отношении поставленных задач. Мы&nbsp;вынуждены отталкиваться от&nbsp;того, что высококачественный прототип будущего проекта способствует повышению качества экспериментов.
           </p>
         </div>
 
-        <div class="about-us__bottom">
-          <div class="about-us__left">
-            <div class="about-us__box box">
+        <div class="about-us__bottom flex">
+          <div class="about-us__left flex">
+            <div class="about-us__box flex">
               <p class="box__descr box__descr--color">
                 Принимая во&nbsp;внимание показатели успешности, перспективное планирование способствует подготовке и&nbsp;реализации новых принципов
               </p>
 
-              <button class="btn-reset btn box__btn">Подробнее</button>
+              <button class="btn-reset box__btn">Подробнее</button>
             </div>
           </div>
-          <div class="about-us__right">
-            <div class="box">
-              <div class="box__decor"></div>
+
+          <div class="about-us__right flex">
+            <div class="box flex">
+              <div class="box__decor" style="background-image: url('images/about-us-icon-1.svg');"></div>
               <div class="box__wrapper">
                 <h3 class="section-subtitle box__title">
                   Консультация с&nbsp;широким активом
                 </h3>
 
                 <p class="box__descr">
-                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для как самодостаточных, так и&nbsp;внешне зависимых концептуальных решений
+                  А&nbsp;также свежий взгляд на&nbsp;привычные вещи&nbsp;&mdash; безусловно открывает новые горизонты для&nbsp;как&nbsp;самодостаточных, так и&nbsp;внешне зависимых концептуальных решений
                 </p>
               </div>
             </div>
 
-            <div class="box">
-              <div class="box__decor"></div>
+            <div class="box flex">
+              <div class="box__decor" style="background-image: url('images/about-us-icon-2.svg');"></div>
               <div class="box__wrapper">
                 <h3 class="section-subtitle box__title">
                   В&nbsp;своём стремлении повысить
