style for stages +

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
     </section>
 
     <section class="stages" id="stages">
-      <div class="container">
+      <div class="container stages__container">
         <h2 class="section-title stages__title">Этапы</h2>
-        <div class="stages__wrapper">
+        <div class="stages__wrapper flex">
           <div class="stages__content">
             <h3 class="section-subtitle stages__subtitle">Проводим консультацию</h3>
 
             <p class="stages__descr">
-              Влечёт за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над эмоциями. В&nbsp;рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
+              Влечёт за&nbsp;собой процесс внедрения и&nbsp;модернизации приоритизации разума над&nbsp;эмоциями. В&nbsp;рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
             </p>
 
             <p class="stages__descr">
@@ -125,7 +125,7 @@
 
             <div class="stages__buttons">
               <button class="btn-reset btn stages__btn">Подробнее</button>
-              <button class="btn-reset btn stages__btn--transp">Договор</button>
+              <button class="btn-reset btn stages__btn stages__btn--transp">Договор</button>
             </div>
           </div>
 
@@ -139,7 +139,7 @@
         <h2 class="section-title questions__title">Вопросы</h2>
 
         <div class="questions__wrapper">
-          <ul class="questions__items">
+          <ul class="list-reset questions__items">
             <li class="questions__item">
               <h3 class="section-subtitle questions__subtitle">
                 Из&nbsp;чего формируется конечная стоимость проекта?
