styles for questions+

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
     </section>
 
     <section class="questions" id="questions">
-      <div class="container">
+      <div class="container questions__container">
         <h2 class="section-title questions__title">Вопросы</h2>
 
         <div class="questions__wrapper">
-          <ul class="list-reset questions__items">
+          <ul class="list-reset questions__items flex">
             <li class="questions__item">
               <h3 class="section-subtitle questions__subtitle">
-                Из&nbsp;чего формируется конечная стоимость проекта?
+                Из&nbsp;чего формируется конечная&nbsp;стоимость проекта?
               </h3>
 
               <p class="questions__descr">
