--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
             </li>
 
             <li class="form__item">
-              <label for="email">
+              <label for="message">
                 <textarea class="form__input form__textarea" name="message" id="message" placeholder="Cообщение" required></textarea>
               </label>
             </li>
           </ul>
 
-          <div class="footer__check">
+          <div class="footer__check flex">
             <button class="btn-reset btn footer__btn" type="submit">
               Отправить данные
             </button>
