--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/media.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <title>Евклид</title>
 </head>
@@ -43,15 +44,17 @@
     <section class="hero">
       <div class="container hero__container">
         <div class="hero__wrapper">
-          <h1 class="hero__title">
-            Проектные решения любой сложности
-          </h1>
+          <div class="hero__content">
+            <h1 class="hero__title">
+              Проектные решения любой сложности
+            </h1>
 
-          <p class="hero__descr">
-            Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются уделом проектантов
-          </p>
+            <p class="hero__descr">
+              Есть над чем задуматься: базовые сценарии поведения пользователей и&nbsp;по&nbsp;сей день остаются уделом проектантов
+            </p>
 
-          <button class="btn-reset btn hero__btn">Заказать расчёт</button>
+            <button class="btn-reset btn hero__btn">Заказать расчёт</button>
+          </div>
         </div>
       </div>
     </section>
