--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <div class="about-us__right flex">
             <div class="box flex">
-              <div class="box__decor" style="background-image: url('images/about-us-icon-1.svg');"></div>
+              <div class="box__decor box__decor--cube"></div>
               <div class="box__wrapper">
                 <h3 class="section-subtitle box__title">
                   Консультация с&nbsp;широким активом
@@ -95,7 +95,7 @@
             </div>
 
             <div class="box flex">
-              <div class="box__decor" style="background-image: url('images/about-us-icon-2.svg');"></div>
+              <div class="box__decor box__decor--gear"></div>
               <div class="box__wrapper">
                 <h3 class="section-subtitle box__title">
                   В&nbsp;своём стремлении повысить
