--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
         </div>
 
         <div class="about-us__bottom flex">
-          <div class="about-us__left flex">
+          <div class="about-us__left about-us__item flex">
+            <div class="about-us__image"></div>
             <div class="about-us__box flex">
               <p class="box__descr box__descr--color">
                 Принимая во&nbsp;внимание показатели успешности, перспективное планирование способствует подготовке и&nbsp;реализации новых принципов
               </p>
-
               <button class="btn-reset box__btn">Подробнее</button>
             </div>
           </div>
 
-          <div class="about-us__right flex">
+          <div class="about-us__right about-us__item flex">
             <div class="box flex">
               <div class="box__decor box__decor--cube"></div>
               <div class="box__wrapper">
